--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "packageManager": "pnpm@10.14.0",
   "devDependencies": {
+    "@types/node": "^24.7.0",
     "prisma": "^6.16.3"
   },
   "dependencies": {
