--- a/apps/pravya/package.json
+++ b/apps/pravya/package.json
@@ -2,12 +2,12 @@
   "name": "@repo/pravya",
   "version": "0.1.0",
   "private": true,
+  "packageManager": "pnpm@10.14.0",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "prisma generate && next build",
     "start": "next start",
-    "lint": "next lint",
-    "email": "npx react-email dev --port 3001"
+    "lint": "next lint"
   },
   "dependencies": {
     "@ai-sdk/google": "^1.2.22",
@@ -24,6 +24,8 @@
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@react-email/components": "^0.5.0",
+    "@repo/auth": "workspace:*",
+    "@repo/db": "workspace:*",
     "@vapi-ai/web": "^2.3.8",
     "ai": "^4.3.17",
     "axios": "^1.10.0",
