--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -32,6 +32,7 @@
     "@openrouter/ai-sdk-provider": "^1.2.0",
     "@prisma/client": "^6.14.0",
     "@qdrant/js-client-rest": "^1.15.0",
+    "@repo/db": "workspace:*",
     "ai": "^5.0.14",
     "axios": "^1.11.0",
     "bullmq": "^5.57.0",
