--- a/apps/pravya/package.json
+++ b/apps/pravya/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tooltip": "^1.2.8",
     "@react-email/components": "^0.5.0",
     "@repo/auth": "workspace:*",
     "@repo/db": "workspace:*",
@@ -43,6 +44,7 @@
     "posthog-js": "^1.260.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "socket.io-client": "^4.7.5",
     "react-email": "^4.2.8",
     "react-hook-form": "^7.59.0",
     "react-icons": "^5.5.0",
