--- a/apps/pravya/package.json
+++ b/apps/pravya/package.json
@@ -35,6 +35,7 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
+    "framer-motion": "^12.23.24",
     "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.535.0",
@@ -44,12 +45,12 @@
     "posthog-js": "^1.260.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "socket.io-client": "^4.7.5",
     "react-email": "^4.2.8",
     "react-hook-form": "^7.59.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "recharts": "^3.1.2",
+    "socket.io-client": "^4.7.5",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17",
