--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -6,13 +6,17 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "prisma": {
+    "seed": "ts-node --project tsconfig.seed.json prisma/seed.ts"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@10.14.0",
   "devDependencies": {
     "@types/node": "^24.7.0",
-    "prisma": "^6.16.3"
+    "prisma": "^6.16.3",
+    "ts-node": "^10.9.2"
   },
   "dependencies": {
     "@prisma/client": "^6.16.3"
