--- a/apps/pravya/package.json
+++ b/apps/pravya/package.json
@@ -29,6 +29,7 @@
     "@react-email/components": "^0.5.0",
     "@repo/auth": "workspace:*",
     "@repo/db": "workspace:*",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@vapi-ai/web": "^2.3.8",
     "ai": "^4.3.17",
     "axios": "^1.10.0",
