--- a/apps/pravya/package.json
+++ b/apps/pravya/package.json
@@ -29,6 +29,7 @@
     "@react-email/components": "^0.5.0",
     "@repo/auth": "workspace:*",
     "@repo/db": "workspace:*",
+    "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@vapi-ai/web": "^2.3.8",
     "ai": "^4.3.17",
@@ -42,6 +43,7 @@
     "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.535.0",
+    "motion": "^12.23.24",
     "next": "15.3.4",
     "next-auth": "^4.24.11",
     "nodemailer": "^6.9.4",
