--- a/apps/pravya/package.json
+++ b/apps/pravya/package.json
@@ -46,6 +46,7 @@
     "motion": "^12.23.24",
     "next": "15.3.4",
     "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "nodemailer": "^6.9.4",
     "posthog-js": "^1.260.1",
     "react": "^19.0.0",
