--- a/apps/pravya/package.json
+++ b/apps/pravya/package.json
@@ -27,8 +27,11 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@react-email/components": "^0.5.0",
+    "@react-spring/three": "^10.0.3",
+    "@react-three/fiber": "^9.4.0",
     "@repo/auth": "workspace:*",
     "@repo/db": "workspace:*",
+    "@shadergradient/react": "^2.4.5",
     "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@vapi-ai/web": "^2.3.8",
@@ -61,6 +64,7 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
+    "three": "^0.180.0",
     "use-stick-to-bottom": "^1.1.1",
     "vaul": "^1.1.2",
     "zod": "^3.25.67"
@@ -72,6 +76,7 @@
     "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/three": "^0.180.0",
     "autoprefixer": "^10.4.21",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
