--- a/apps/pravya/package.json
+++ b/apps/pravya/package.json
@@ -43,6 +43,7 @@
     "class-variance-authority": "^0.7.1",
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.5",
     "framer-motion": "^12.23.24",
     "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
