--- a/apps/pravya/components.json
+++ b/apps/pravya/components.json
@@ -21,6 +21,7 @@
   "registries": {
     "@ai-elements": "https://registry.ai-sdk.dev/{name}.json",
     "@aceternity": "https://ui.aceternity.com/registry/{name}.json",
-    "@magicui": "https://magicui.design/r/{name}.json"
+    "@magicui": "https://magicui.design/r/{name}.json",
+    "@react-bits": "https://reactbits.dev/r/{name}.json"
   }
 }
