mostly all the UI stuff completed for landing and dashboard

--- a/apps/pravya/package.json
+++ b/apps/pravya/package.json
@@ -34,6 +34,7 @@
     "@repo/auth": "workspace:*",
     "@repo/db": "workspace:*",
     "@shadergradient/react": "^2.4.5",
+    "@studio-freight/lenis": "^1.0.42",
     "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@vapi-ai/web": "^2.3.8",
