--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "dev:pravya" : "pnpm -F @repo/pravya run dev",
     "dev:ws-server" : "pnpm -F @repo/ws-server run dev",
-    "dev:worker" : "pnpm -F @repo/worker run dev"
+    "dev:worker" : "pnpm -F @repo/worker run dev",
+    "dev:admin" : "pnpm -F @repo/admin run dev"
   },
   "keywords": [],
   "author": "",
