--- a/apps/pravya/package.json
+++ b/apps/pravya/package.json
@@ -49,6 +49,7 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "cobe": "^0.6.5",
+    "dodopayments": "^2.4.6",
     "framer-motion": "^12.23.24",
     "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.2",
@@ -69,6 +70,7 @@
     "recharts": "^3.1.2",
     "socket.io-client": "^4.7.5",
     "sonner": "^2.0.5",
+    "standardwebhooks": "^1.0.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^3.4.17",
     "tailwindcss-animate": "^1.0.7",
