--- a/package.json
+++ b/package.json
@@ -5,14 +5,18 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev:pravya" : "pnpm -F @repo/pravya run dev",
-    "dev:ws-server" : "pnpm -F @repo/ws-server run dev",
-    "dev:worker" : "pnpm -F @repo/worker run dev",
-    "dev:admin" : "pnpm -F @repo/admin run dev",
-    "ngrok" : "ngrok http 3000 --domain=throbbingly-lappeted-anja.ngrok-free.dev"
+    "dev:pravya": "pnpm -F @repo/pravya run dev",
+    "dev:ws-server": "pnpm -F @repo/ws-server run dev",
+    "dev:worker": "pnpm -F @repo/worker run dev",
+    "dev:admin": "pnpm -F @repo/admin run dev",
+    "dev:webhooks": "pnpm -F @repo/webhooks run dev",
+    "ngrok": "ngrok http 3000 --domain=throbbingly-lappeted-anja.ngrok-free.dev"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "packageManager": "pnpm@10.14.0"
+  "packageManager": "pnpm@10.14.0",
+  "dependencies": {
+    "@repo/db": "workspace:*"
+  }
 }
