--- a/apps/pravya/package.json
+++ b/apps/pravya/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^1.2.22",
+    "@ai-sdk/react": "^2.0.117",
     "@hookform/resolvers": "^5.1.1",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^6.10.1",
@@ -40,7 +41,7 @@
     "@tabler/icons-react": "^3.35.0",
     "@tailwindcss/line-clamp": "^0.4.4",
     "@vapi-ai/web": "^2.3.8",
-    "ai": "^4.3.17",
+    "ai": "^5.0.115",
     "axios": "^1.10.0",
     "bcryptjs": "^3.0.2",
     "bullmq": "^5.57.0",
