--- a/apps/pravya/package.json
+++ b/apps/pravya/package.json
@@ -5,7 +5,7 @@
   "packageManager": "pnpm@10.14.0",
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "prisma generate && next build",
+    "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
