--- a/docker/Dockerfile.pravya
+++ b/docker/Dockerfile.pravya
@@ -3,6 +3,9 @@ FROM node:20-alpine AS base
 WORKDIR /app
 RUN corepack enable && corepack prepare pnpm@10.14.0 --activate
 
+ARG REDIS_URL
+ENV REDIS_URL=$REDIS_URL
+
 # ---------- Dependencies ----------
 FROM base AS deps
 
@@ -26,10 +29,10 @@ WORKDIR /app
 ENV NODE_ENV=production
 
 # Copy standalone output
-COPY --from=builder /app/apps/admin/.next/standalone ./
-COPY --from=builder /app/apps/admin/.next/static ./apps/admin/.next/static
-COPY --from=builder /app/apps/admin/public ./apps/admin/public
+COPY --from=builder /app/apps/pravya/.next/standalone ./
+COPY --from=builder /app/apps/pravya/.next/static ./apps/pravya/.next/static
+COPY --from=builder /app/apps/pravya/public ./apps/pravya/public
 
 EXPOSE 3003
 
-CMD ["node", "apps/admin/server.js"]
+CMD ["node", "apps/pravya/server.js"]
