--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc -b",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "dev:parser": "ts-node-dev --respawn --transpile-only src/parseResume.ts",
     "dev:analyse": "ts-node-dev --respawn --transpile-only src/analyseResume.ts",
