--- a/docker/Dockerfile.worker
+++ b/docker/Dockerfile.worker
@@ -1,26 +1,31 @@
 # ---------- Base ----------
 FROM node:20-alpine AS base
 WORKDIR /app
+
 RUN corepack enable && corepack prepare pnpm@10.14.0 --activate
 
-ARG REDIS_URL
-ENV REDIS_URL=$REDIS_URL
+# Common envs
+ENV NODE_ENV=production
 
 # ---------- Dependencies ----------
 FROM base AS deps
 
 COPY pnpm-workspace.yaml ./
 COPY package.json pnpm-lock.yaml ./
+
 COPY packages ./packages
-COPY apps/pravya ./apps/pravya
+COPY apps/worker ./apps/worker
 
 RUN pnpm install --frozen-lockfile
 
 # ---------- Build ----------
 FROM deps AS builder
 
-RUN pnpm -F @repo/db exec prisma generate
-RUN pnpm -F @repo/pravya build
+# Prisma (only if worker uses it)
+RUN pnpm -F @repo/db exec prisma generate || true
+
+# Build worker (ts → js)
+RUN pnpm -F @repo/worker build
 
 # ---------- Production ----------
 FROM node:20-alpine AS runner
@@ -28,11 +33,11 @@ WORKDIR /app
 
 ENV NODE_ENV=production
 
-# Copy standalone output
-COPY --from=builder /app/apps/pravya/.next/standalone ./
-COPY --from=builder /app/apps/pravya/.next/static ./apps/pravya/.next/static
-COPY --from=builder /app/apps/pravya/public ./apps/pravya/public
+# Copy only required runtime files
+COPY --from=builder /app/apps/worker/dist ./dist
+COPY --from=builder /app/apps/worker/package.json ./package.json
+COPY --from=builder /app/node_modules ./node_modules
 
-EXPOSE 3000
+EXPOSE 8080
 
-CMD ["node", "apps/pravya/server.js"]
+CMD ["node", "dist/index.js"]
