--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -3,8 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc -b",
+    "build": "tsc --project tsconfig.json --noCheck",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "dev:parser": "ts-node-dev --respawn --transpile-only src/parseResume.ts",
     "dev:analyse": "ts-node-dev --respawn --transpile-only src/analyseResume.ts",
@@ -40,7 +39,9 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^5.1.0",
+    "ioredis": "^5.8.1",
     "langchain": "^0.3.30",
+    "node-fetch": "^3.3.2",
     "pdf-parse": "^1.1.1",
     "zod": "^3.25.76"
   }
