--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -23,6 +23,7 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^2.0.6",
+    "@ai-sdk/groq": "^3.0.4",
     "@huggingface/inference": "^4.7.1",
     "@langchain/community": "^0.3.55",
     "@langchain/core": "^0.3.70",
@@ -33,7 +34,7 @@
     "@prisma/client": "^6.14.0",
     "@qdrant/js-client-rest": "^1.15.0",
     "@repo/db": "workspace:*",
-    "ai": "^5.0.115",
+    "ai": "^6.0.23",
     "axios": "^1.11.0",
     "bullmq": "^5.57.0",
     "cors": "^2.8.5",
