--- a/apps/ws-server/package.json
+++ b/apps/ws-server/package.json
@@ -16,9 +16,10 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^2.0.19",
+    "@ai-sdk/groq": "^3.0.4",
     "@deepgram/sdk": "^4.11.2",
     "@repo/db": "workspace:*",
-    "ai": "^5.0.65",
+    "ai": "^6.0.27",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
