--- a/apps/ws-server/package.json
+++ b/apps/ws-server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index1.ts",
   "scripts": {
+    "build": "tsc --project tsconfig.json --noCheck",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts"
   },
   "keywords": [],
