--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "build": "tsc --project tsconfig.json --noCheck",
+    "build2": "tsc --project tsconfig.json --noCheck",
+    "build": "esbuild src/index.ts   --bundle   --platform=node   --format=cjs   --outdir=dist   --external:pdf-parse",
+    "start": "node dist/index.js",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "test-redis": "ts-node-dev --respawn --transpile-only src/redis-test.ts",
     "dev:parser": "ts-node-dev --respawn --transpile-only src/parseResume.ts",
@@ -40,6 +42,7 @@
     "bullmq": "^5.57.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "esbuild": "^0.27.2",
     "express": "^5.1.0",
     "ioredis": "^5.8.1",
     "langchain": "^0.3.30",
