--- a/apps/pravya/package.json
+++ b/apps/pravya/package.json
@@ -69,6 +69,7 @@
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "recharts": "^3.1.2",
+    "resend": "^6.7.0",
     "socket.io-client": "^4.7.5",
     "sonner": "^2.0.5",
     "standardwebhooks": "^1.0.0",
